--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "jest": {
     "testEnvironment": "node",
+    "testRunner": "jest-circus/runner",
     "setupFilesAfterEnv": [
       "<rootDir>/tests/setupTests.js"
     ],
@@ -43,6 +44,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest-circus": "^26.0.1",
     "mysql": "^2.18.1",
     "npm-run-all": "^4.1.5",
     "yamljs": "^0.3.0"
