--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.5.0",
     "jest-circus": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
