--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest-circus": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.10",
     "npm-run-all": "^4.1.5",
     "yamljs": "^0.3.0"
   },
