--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start-watch": "npm-run-all migrate start:server:watch",
     "tests:setup-db": "docker-compose up -d test_db",
     "tests:migrate-db": "db-migrate up -e test",
-    "test": "jest",
+    "test": "jest --maxWorkers=1",
+    "test-watch": "jest --watchAll",
     "lint": "semistandard --fix"
   },
   "husky": {
@@ -41,10 +42,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.26.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.5.0",
     "jest-circus": "^26.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "npm-run-all": "^4.1.5",
     "yamljs": "^0.3.0"
