--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,22 @@ DB_PORT_TEST=3308
 DB_USER_TEST=root
 DB_PASS_TEST=root
 DB_NAME_TEST=fl_lyonnais_api_database_test
+
+# SMTP account for production
+# See NodeMailer for more information
+EMAIL_USER=
+EMAIL_PASS=
+EMAIL_SMTP_HOST=
+EMAIL_SMTP_PORT=
+EMAIL_SMTP_SECURE=
+
+# SMTP account for testing environment : https://ethereal.email/
+# See NodeMailer for more information
+EMAIL_USER_TEST=
+EMAIL_PASS_TEST=
+EMAIL_SMTP_HOST_TEST=smtp.ethereal.email
+EMAIL_SMTP_PORT_TEST=587
+EMAIL_SMTP_SECURE_TEST=false
+
+# Target URL where email validation link to
+EMAIL_DESTINATION_URL=http://localhost:3000/verification_email
