--- a/.env.sample
+++ b/.env.sample
@@ -27,4 +27,5 @@ EMAIL_SMTP_PORT_TEST=587
 EMAIL_SMTP_SECURE_TEST=false
 
 # Target URL where email validation link to
+# URL must be ended with "/"
 EMAIL_DESTINATION_URL=http://localhost:3000/users/validation_email/
