--- a/.env.sample
+++ b/.env.sample
@@ -28,3 +28,5 @@ EMAIL_SMTP_SECURE_TEST=false
 
 # Target URL where email validation link to
 EMAIL_DESTINATION_URL=http://localhost:3000/verification_email
+
+JWT_PRIVATE_KEY=efey86fiUHUI675jhejhz!!3
