--- a/.env.sample
+++ b/.env.sample
@@ -14,9 +14,6 @@ DB_NAME_TEST=fl_lyonnais_api_database_test
 # See NodeMailer for more information
 EMAIL_USER=
 EMAIL_PASS=
-EMAIL_SMTP_HOST=
-EMAIL_SMTP_PORT=
-EMAIL_SMTP_SECURE=
 
 # SMTP account for testing environment : https://ethereal.email/
 # See NodeMailer for more information
@@ -27,6 +24,9 @@ EMAIL_SMTP_PORT_TEST=587
 EMAIL_SMTP_SECURE_TEST=false
 
 # Target URL where email validation link to
-EMAIL_DESTINATION_URL=http://localhost:3000/verification_email
+
+# URL must be ended with "/"
+EMAIL_DESTINATION_URL=http://localhost:3000/users/validation_email/
+
 
 JWT_PRIVATE_KEY=efey86fiUHUI675jhejhz!!3
