us8 - corrections avant PR

--- a/.env.sample
+++ b/.env.sample
@@ -30,3 +30,6 @@ EMAIL_DESTINATION_URL=http://localhost:3000/users/validation_email/
 
 
 JWT_PRIVATE_KEY=efey86fiUHUI675jhejhz!!3
+
+BASE_URL=http://localhost:3000
+BASE_URL_FRONT=http://localhost:3001
