--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express-validator": "^6.5.0",
     "jest-circus": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.10",
     "npm-run-all": "^4.1.5",
