--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.10",
     "npm-run-all": "^4.1.5",
+    "query-string": "^6.13.1",
     "random-keygen": "^1.0.4",
     "yamljs": "^0.3.0"
   },
