Email - mise à jour de .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -10,10 +10,9 @@ DB_USER_TEST=root
 DB_PASS_TEST=root
 DB_NAME_TEST=fl_lyonnais_api_database_test
 
-EMAIL_USER=contact.freelanceslyonnais@gmail.com
-EMAIL_SMTP_HOST=smtp.gmail.com
-EMAIL_SMTP_PORT=587
-EMAIL_SMTP_SECURE=false
+# Email parameters according to the SMTP service provider
+EMAIL_USER=
+EMAIL_PASS=
 
 # Target URL where email validation link to
 # URL must be ended with "/"
