--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "npm-run-all": "^4.1.5",
     "query-string": "^6.13.1",
     "random-keygen": "^1.0.4",
+    "uniqid": "^5.2.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
